--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "script.js",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "4.15.*"
   },
   "devDependencies": {},
   "scripts": {
