--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "express": "4.15.*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node script.js",
+    "start dev": "nodemon script.js"
   },
   "repository": {
     "type": "git",
