--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "script.js",
   "dependencies": {
-    "express": "4.15.*",
     "body-parser": "1.17.*",
-    "mongodb": "2.2.*"
+    "express": "4.15.*",
+    "mongodb": "2.2.*",
+    "mongoose": "^4.9.*"
   },
-
   "devDependencies": {
     "nodemon": "^1.11.0"
   },
