Use template engine to generate html with ajax data

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "script.js",
   "dependencies": {
     "body-parser": "1.17.*",
+    "ejs": "^2.5.*",
     "express": "4.15.*",
     "mongodb": "2.2.*",
     "mongoose": "^4.9.*"
